--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     'cachetools',
     'certifi',
     'cryptography',
-    'htcondor',
+    'htcondor<=24.99.99',  # bug in 25.x Submit.itemdata()
     'httpx',
     'jsonschema',
     'ldap3',
