--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,10 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v5
+      with:
+        fetch-depth: 0  # setuptools-scm needs to access git tags
+        ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
     - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
